--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,12 @@
 
 {% block title %} HOME {% endblock %}
 
-{% block content %} 
+{% block content %}
 
-<h1>HIHIHIHI</h1>
+
+    <section class="wrap">
+        <div class="tile is-ancestor" id="list_review"><div>
+    </section>
+
 
 {% endblock %}
