fix login modal popup

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,6 +45,7 @@
         </ul>
     </nav>
     <div class="page">{% block content %} {% endblock %}</div>
+    <section id="section-post" class="section"></section>
 
     <script src="{{ url_for('static', filename='js/mypage.js') }}"></script>
     <script src="{{ url_for('static', filename='js/MoonJongHyeon.js') }}"></script>
