--- a/app/templates/modals/signin.html
+++ b/app/templates/modals/signin.html
@@ -6,7 +6,7 @@
                 <p class="control">
                     <label class="label">Email</label>
                 <div class="control has-icons-left has-icons-right">
-                    <input id="input-email" class="input" type="text" placeholder="너가 가입한 이메일을 적어라">
+                    <input id="input-email" class="input" type="email" placeholder="너가 가입한 이메일을 적어라">
                     <p id="help-email" class="help"></p>
                 </div>
                 </p>
@@ -16,7 +16,7 @@
                 <p class="control">
                     <label class="label">Password</label>
                 <div class="control has-icons-left has-icons-right">
-                    <input id="input-password" class="input" type="text" placeholder="너의 소중한 비번을 넘겨라">
+                    <input id="input-password" class="input" type="password" placeholder="너의 소중한 비번을 넘겨라">
                     <p id="help-password" class="help"></p>
                 </div>
                 </p>
