--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,13 @@
-{% extends "base.html" %}
+{% extends "header.html" %}
 
 {% block title %} HOME {% endblock %}
 
-{% block content %}
+{% block main %}
+    <script>
+        const flag = JSON.parse("{{flag}}")
+        console.log(flag, typeof(flag))
+        if(flag==false) alert("로그인을 먼저 해주세요!")
+    </script>
 
 
     <section class="wrap">
