--- a/app/templates/book.html
+++ b/app/templates/book.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/59879a4342.js" crossorigin="anonymous"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <link
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
@@ -26,12 +27,29 @@
     <!--배너-->
     <div class="banner" onclick="window.location.href='/'">
     </div>
+    <nav class="header navbar" role="navigation" aria-label="main navigation">
+        <ul class="menu">
+            {% if token_info == False %}
+                <li class="is-hidden"><a href="/mypage">마이페이지</a></li>
+                <li class="is-success"><a onclick="$('#section-post').load('/user/sign_in', complete=activateModal )">로그인</a>
+                </li>
+                <li class="is-hidden"><a onclick="signout()">로그아웃</a></li>
+                <li class="is-success"><a href="/user/sign_up">회원가입</a></li>
+            {% else %}
+                <li class="is-success"><a href="/mypage">마이페이지</a></li>
+                <li class="is-hidden"><a
+                        onclick="$('#section-post').load('/user/sign_in', complete=activateModal )">로그인</a></li>
+                <li class="is-success"><a onclick="signout()">로그아웃</a></li>
+                <li class="is-hidden"><a href="/user/sign_up">회원가입</a></li>
+            {% endif %}
+        </ul>
+    </nav>
 
     <!--검색바-->
-{#    <div class="search_ba">#}
-{#        <input class="input is-success" type="text" placeholder="Success input">#}
-{#        <button onclick="bookSearch_list()" class="button is-primary is-light"><i class="fa fa-search"></i></button>#}
-{#    </div>#}
+    {#    <div class="search_ba">#}
+    {#        <input class="input is-success" type="text" placeholder="Success input">#}
+    {#        <button onclick="bookSearch_list()" class="button is-primary is-light"><i class="fa fa-search"></i></button>#}
+    {#    </div>#}
 
     <div class="tile is-ancestor">
         <!--이미지-->
@@ -98,5 +116,6 @@
 </section>
 
 <script src="{{ url_for('static', filename='js/book.js') }}"></script>
+<script src="{{ url_for('static', filename='js/MoonJongHyeon.js') }}"></script>
 </body>
 </html>
