--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
 
 
     <section class="wrap">
-        <div class="tile is-ancestor" id="list_review"><div>
+        <div class="tile is-ancestor" id="list_review">
     </section>
 
 
