--- a/app/templates/book.html
+++ b/app/templates/book.html
@@ -1,102 +1,85 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+{% extends "base.html" %}
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://kit.fontawesome.com/59879a4342.js" crossorigin="anonymous"></script>
+{% block title %} Book {% endblock %}
 
-    <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
-    />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/book.css') }}"/>
+{% block content %}
 
-    <title>detail_book</title>
+    <!--전체 감싸기-->
+    <section class="wrap">
 
+        {#    <div class="search_ba">#}
+        {#        <input class="input is-success" type="text" placeholder="Success input">#}
+        {#        <button onclick="bookSearch_list()" class="button is-primary is-light"><i class="fa fa-search"></i></button>#}
+        {#    </div>#}
 
-</head>
-
-<body>
-<!--전체 감싸기-->
-<section class="wrap">
-    <!--배너-->
-    <div class="banner" onclick="window.location.href='/'">
-    </div>
-
-    <!--검색바-->
-{#    <div class="search_ba">#}
-{#        <input class="input is-success" type="text" placeholder="Success input">#}
-{#        <button onclick="bookSearch_list()" class="button is-primary is-light"><i class="fa fa-search"></i></button>#}
-{#    </div>#}
-
-    <div class="tile is-ancestor">
-        <!--이미지-->
-        <div class="tile is-4">
+        <div class="tile is-ancestor">
+            <!--이미지-->
+            <div class="tile is-4">
+                <div class="tile is-parent">
+                    <article class="tile is-child notification">
+                        <figure class="image">
+                            <img class="is-rounded"
+                                 src="{{ bookView.image }}">
+                        </figure>
+                    </article>
+                </div>
+            </div>
+            <!--책정보-->
             <div class="tile is-parent">
-                <article class="tile is-child notification">
-                    <figure class="image">
-                        <img class="is-rounded"
-                             src="{{ bookView.image }}">
-                    </figure>
+                <article class="tile is-child notification ">
+                    <div class="book_content">
+                        <p class="title">{{ bookView.title }}</p>
+                        <p class="subtitle">{{ bookView.author }}</p>
+
+                        <div class="content">
+                            <p>{{ bookView.pubdate }}</p>
+                            <p>{{ bookView.publisher }}</p>
+                            <p>{{ bookView.discount }}</p>
+                            <p>{{ bookView.description }}</p>
+                        </div>
+                        <div class="buttons">
+                            <button class="button is-primary is-light" id="reviewbtn">Review</button>
+                        </div>
+                    </div>
                 </article>
             </div>
         </div>
+<section class="container is-max-widescreen">
 
-
-        <!--책정보-->
-        <div class="tile is-parent">
-            <article class="tile is-child notification ">
-                <div class="book_content">
-                    <p class="title">{{ bookView.title }}</p>
-                    <p class="subtitle">{{ bookView.author }}</p>
-                    <hr/>
-                    <div class="content">
-                        <p>{{ bookView.pubdate }}</p>
-                        <p>{{ bookView.publisher }}</p>
-                        <p>{{ bookView.discount }}</p>
-                        <p>{{ bookView.description }}</p>
-                    </div>
-                    <div class="buttons">
-                        <button class="button is-primary is-light">Review</button>
-                    </div>
+        <article class="media" id="commentshow">
+            <figure class="media-left">
+                <p class="image is-64x64">
+                    <img src="https://bulma.io/images/placeholders/128x128.png">
+                </p>
+            </figure>
+            <div class="media-content">
+                <div class="field">
+                    <p class="control">
+                        <textarea class="textarea" placeholder="Add a comment..."></textarea>
+                    </p>
                 </div>
-            </article>
-        </div>
-    </div>
+                <nav class="level">
+                    <div class="level-left">
+                        <div class="level-item">
+                            <a class="button is-info">Submit</a>
+                        </div>
+                    </div>
+                    <div class="level-right">
+                        <div class="level-item">
+                            <label class="checkbox">
+                                <input type="checkbox"> Press enter to submit
+                            </label>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </article>
+            <hr>
 
-    <section class="comment">
-        <div class="container is-max-desktop">
-            <div class="notification is-primary">
-                This container is <strong>fluid</strong>: it will have a 32px gap on either side, on any
-                viewport size.
-            </div>
-        </div>
-        <div class="container is-max-desktop">
-            <div class="notification is-primary">
-                This container is <strong>fluid</strong>: it will have a 32px gap on either side, on any
-                viewport size.
-            </div>
-        </div>
-        <div class="container is-max-desktop">
-            <div class="notification is-primary">
-                This container is <strong>fluid</strong>: it will have a 32px gap on either side, on any
-                viewport size.
-            </div>
-        </div>
-        <div class="container is-max-desktop">
-            <div class="notification is-primary">
-                This container is <strong>fluid</strong>: it will have a 32px gap on either side, on any
-                viewport size.
-            </div>
-        </div>
+            <div class="box" id="review_commnetbox">
 
+            </div>
+        </section>
     </section>
-</section>
 
-<script src="{{ url_for('static', filename='js/book.js') }}"></script>
-</body>
-</html>
+{% endblock %}
