--- a/app/templates/book.html
+++ b/app/templates/book.html
@@ -1,31 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+{% extends "header.html" %}
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://kit.fontawesome.com/59879a4342.js" crossorigin="anonymous"></script>
+{% block title %}detail_book{% endblock %}
 
-    <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
-    />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/book.css') }}"/>
-
-    <title>detail_book</title>
-
-
-</head>
-
-<body>
+{% block main %}
 <!--전체 감싸기-->
 <section class="wrap">
     <!--배너-->
-    <div class="banner" onclick="window.location.href='/'">
-    </div>
+    <!-- <div class="banner" onclick="window.location.href='/'">
+    </div> -->
 
     <!--검색바-->
 {#    <div class="search_ba">#}
@@ -61,7 +43,7 @@
                         <p>{{ bookView.description }}</p>
                     </div>
                     <div class="buttons">
-                        <button class="button is-primary is-light">Review</button>
+                        <button class="button is-primary is-light" onclick="reviewPostModal()">Review</button>
                     </div>
                 </div>
             </article>
@@ -96,7 +78,4 @@
 
     </section>
 </section>
-
-<script src="{{ url_for('static', filename='js/book.js') }}"></script>
-</body>
-</html>
+{% endblock %}
