--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -11,13 +11,20 @@
             <img src="{{ url_for('static', filename='title.png') }}" />
         </a>
     </div>
-    <ul class="menu">
-        <li><a href="/mypage">마이페이지</a></li>
-        <!-- <li><a onclick="navToMypage()">마이페이지</a></li> -->
-        <li><a onclick="$('#section-post').load('/user/sign_in', complete=activateModal )">로그인</a></li>
-        <li><a href="/user/sign_up">회원가입</a></li>
-    </ul>
+    <div class="title">
+        <p>분 서 갱 유</p>
+        <ul class="navmenu">
+            {% if token_info == False %}
+                <li><a onclick="siginModalPop()">로그인</a></li>
+                <li><a href="/user/sign_up">회원가입</a></li>
+            {% else %}
+                <li><a href="/mypage">마이페이지</a></li>
+                <li><a onclick="signout()">로그아웃</a></li>
+            {% endif %}
+        </ul>
+    </div>
 </nav>
+
 <div class="page">{% block main %} {% endblock %}</div>
 
 {% endblock %}
