--- a/app/templates/modals/signin.html
+++ b/app/templates/modals/signin.html
@@ -25,7 +25,7 @@
             <nav class="level is-mobile">
                 <div class="level-left">
                     <div class="level-item">
-                        <a class="button is-success" onclick="sign_in()">로그인</a>
+                        <a class="button is-success" onclick="signinSubmit()">로그인</a>
                     </div>
                 </div>
                 <div class="level-right">
