--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -15,7 +15,7 @@
         <p>분 서 갱 유</p>
         <ul class="navmenu">
             {% if token_info == False %}
-                <li><a onclick="siginModalPop()">로그인</a></li>
+                <li><a onclick="signinModalPop()">로그인</a></li>
                 <li><a href="/user/sign_up">회원가입</a></li>
             {% else %}
                 <li><a href="/mypage">마이페이지</a></li>
