--- a/app/templates/modals/profile.html
+++ b/app/templates/modals/profile.html
@@ -1,5 +1,5 @@
-<div class="modal" id="modal-edit">
-    <div class="modal-background" onclick='$("#modal-edit").removeClass("is-active")'></div>
+<div class="modal" id="modal-pop">
+    <div class="modal-background" onclick='$("#modal-pop").removeClass("is-active")'></div>
     <div class="modal-content">
         <div class="box">
             <article class="media">
@@ -71,7 +71,7 @@
                             </div>
                             <div class="level-item">
                                 <a class="button is-sparta is-outlined"
-                                   onclick='$("#modal-edit").removeClass("is-active")'>취소</a>
+                                   onclick='$("#modal-pop").removeClass("is-active")'>취소</a>
                             </div>
                         </div>
                     </nav>
@@ -80,5 +80,5 @@
         </div>
     </div>
     <button class="modal-close is-large" aria-label="close"
-            onclick='$("#modal-edit").removeClass("is-active")'></button>
+            onclick='$("#modal-pop").removeClass("is-active")'></button>
 </div>
