--- a/app/templates/modals/signin.html
+++ b/app/templates/modals/signin.html
@@ -1,5 +1,5 @@
-<div class="modal" id="modal-post">
-    <div class="modal-background" onclick='$("#modal-post").removeClass("is-active")'></div>
+<div class="modal" id="modal-pop">
+    <div class="modal-background" onclick='$("#modal-pop").removeClass("is-active")'></div>
     <div class="modal-content">
         <div class="box">
             <div class="field">
@@ -31,7 +31,7 @@
                 <div class="level-right">
                     <div class="level-item">
                         <a class="button is-outlined"
-                           onclick='$("#modal-post").removeClass("is-active")'>취소</a>
+                           onclick='$("#modal-pop").removeClass("is-active")'>취소</a>
                     </div>
                 </div>
             </nav>
@@ -39,5 +39,5 @@
     </div>
 
     <button class="modal-close is-large" aria-label="close"
-            onclick='$("#modal-post").removeClass("is-active")'></button>
+            onclick='$("#modal-pop").removeClass("is-active")'></button>
 </div>
