--- a/app/templates/mypage.html
+++ b/app/templates/mypage.html
@@ -3,10 +3,11 @@
 {% block title %} 마이페이지 {% endblock %}
 
 {% block main %}
+
 <div class="container">
   <div class="upper-wrapper">
-      <div class="profile">
-        <img class="my-image" src="{{ url_for('static', filename='/profile_default.png') }}" />
+      <div class="profile" id="profile-img">
+        <img class="my-image" src="{{ url_for('static', filename='/profiles/profile_default.png') }}" />
         <a>{{ user.username }}</a>
         <button type="button" class="btn btn-outline-secondary" onclick="mypageProfile()">프로필 수정</button>
       </div>
