get profile from server & crop

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,7 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Dokdo&family=East+Sea+Dokdo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
 
     <!-- custom file -->
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
