--- a/app/static/css/mypage.css
+++ b/app/static/css/mypage.css
@@ -43,15 +43,24 @@
 .upper-wrapper > .profile > .my-image {
     /* border: 1px solid red; */
 
-    max-width: 720px;
+    width:300px;
+    height:300px;
+    object-fit:cover;
+    border-radius: 50%;
+    border: 2px solid white;
+    box-shadow: 0px 0px 10px black;
 }
 
 .upper-wrapper > .profile > a {
     margin-top: 10px;
+    font-family: 'Jua', sans-serif;
+    font-size: 1.5em
 }
 
 .upper-wrapper > .profile > button {
     margin-top: 10px;
+    font-family: 'Jua', sans-serif;
+    font-size: 1.2em
 }
 
 
