--- a/app/static/css/mypage.css
+++ b/app/static/css/mypage.css
@@ -106,14 +106,37 @@
     padding: 0;
 }
 
-.upper-wrapper > .my-reviews > .my-review-card > .card-body > blockquote > a {
-    font-size: 0.8em;
+.upper-wrapper > .my-reviews > .my-review-card > .card-body > blockquote {
+
+    display: flex;
+    flex-direction: row;
 }
 
-.upper-wrapper > .my-reviews > .my-review-card > .card-body > blockquote > footer {
+.upper-wrapper > .my-reviews > .my-review-card > .card-body > blockquote > a {
+    
+    font-size: 0.8em;
+    flex: 3;
+}
+
+.upper-wrapper > .my-reviews > .my-review-card > .card-body > blockquote > .footers {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.upper-wrapper > .my-reviews > .my-review-card > .card-body > blockquote > .footers > button {
+    margin-top: 10px;
+    margin-right: 10px;
+    /* align-self: flex-end; */
+    /* flex: 1;
+    display: flex */
+}
+
+.upper-wrapper > .my-reviews > .my-review-card > .card-body > blockquote > .footers > footer {
     font-size: 0.7em;
     text-align: right;
-    margin-top: 0px;
+    margin-top: 10px;
 }
 
 
