--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,9 @@
 
 
     <section class="wrap">
-        <div class="tile is-ancestor" id="list_review">
+        <div class="indexwrap">
+        <div class="tile is-ancestor" id="list_review"></div>
+        </div>
     </section>
 
 
