index book list

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -15,7 +15,7 @@
 
 .indexwrap{
 
-    margin: 130px auto;
+    /* margin: 10px auto; */
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
